--- a/label_studio/users/templates/users/user_account.html
+++ b/label_studio/users/templates/users/user_account.html
@@ -176,9 +176,9 @@
   <script>
     (() => {
       {% if settings.HOSTNAME %}
-      const CURL_TEMPLATE = "curl -X GET {{ settings.HOSTNAME }}/api/projects/ -H 'Authorization: Token'"
+      const CURL_TEMPLATE = "curl -X GET {{ settings.HOSTNAME }}/api/projects/ -H 'Authorization: Token"
       {% else %}
-      const CURL_TEMPLATE = "curl -X GET http://localhost:8080/api/projects/ -H 'Authorization: Token'"
+      const CURL_TEMPLATE = "curl -X GET http://localhost:8080/api/projects/ -H 'Authorization: Token"
       {% endif %}
 
       document.querySelectorAll('[data-copy]').forEach(button => {
@@ -202,7 +202,7 @@
           .then(res => res.json())
           .then(res => {
             input.value = res.token;
-            example.value = `${CURL_TEMPLATE} ${res.token}`
+            example.value = `${CURL_TEMPLATE} ${res.token}'`
             button.classList.add('blink');
             setTimeout(() => button.classList.remove('blink'))
           });
