--- a/label_studio/users/templates/users/user_account.html
+++ b/label_studio/users/templates/users/user_account.html
@@ -176,6 +176,10 @@
   <script>
     (() => {
       {% if settings.HOSTNAME %}
+      const hostname = {{ settings.HOSTNAME }};
+      {% else %}
+      const hostname = 'http://localhost:8080';
+      {% endif %}
       const CURL_TEMPLATE = "curl -X GET {{ settings.HOSTNAME }}/api/projects/ -H 'Authorization: Token"
       {% else %}
       const CURL_TEMPLATE = "curl -X GET http://localhost:8080/api/projects/ -H 'Authorization: Token"
