--- a/docs/source/templates/gallery_nlp.html
+++ b/docs/source/templates/gallery_nlp.html
@@ -111,6 +111,17 @@ meta_description: Gallery of nlp templates available to perform data labeling an
       </a>
     </div>
 
+    <div class="column">
+      <a href="/templates/multi-page-document-annotation.html">
+        <div class="card">
+          <div class="image-wrap">
+            <div class="image" style="background-image: url(/images/templates/repeater-tag-multi-page-document-annotation.png)"></div>
+          </div>
+          <div class="category">Document Annotation</div>
+          <div class="title">Multi-page Document Annotation</div>
+        </div>
+      </a>
+    </div>
 
 </div>
 </div>
