docs: Add order_enterprise: <number>
[DOC-92]

--- a/docs/themes/v2/layout/home.ejs
+++ b/docs/themes/v2/layout/home.ejs
@@ -185,10 +185,10 @@ meta_description: Get started with Label Studio by creating projects to label an
     </ul>
   </div>
   <div class="card">
-    <%- partial("component/heading", {text: "Integrations and Development", tag: "h2", size: "XSmall", customClass: "card-title"}) %>
+    <%- partial("component/heading", {text: "Integration and Development", tag: "h2", size: "XSmall", customClass: "card-title"}) %>
     <ul class="card-links-list">
       <li>
-        <%- partial("component/link", { url: "/guide/webhooks.html", label: "Integrations", size: "Full" }) %>
+        <%- partial("component/link", { url: "/guide/webhooks.html", label: "Integration", size: "Full" }) %>
       </li>
       <li>
         <%- partial("component/link", { url: "/guide/frontend.html", label: "Advanced Development", size: "Full" }) %>
@@ -208,7 +208,7 @@ meta_description: Get started with Label Studio by creating projects to label an
         <%- partial("component/link", { url: "/guide/release_notes.html", label: "Release Notes", size: "Full" }) %>
       </li>
       <li>
-        <%- partial("component/link", { url: "/guide/get-started.html#Terminology", label: "Glossary", size: "Full" }) %>
+        <%- partial("component/link", { url: "/guide/get_started.html#Terminology", label: "Glossary", size: "Full" }) %>
       </li>
     </ul>
   </div>
