Update release notes link for ENT on home.ejs

--- a/docs/themes/v2/layout/home.ejs
+++ b/docs/themes/v2/layout/home.ejs
@@ -182,8 +182,8 @@ meta_description: Get started with Label Studio by creating projects to label an
       <li class="opensource-only">
         <%- partial("component/link", { url: "/api", label: "API and SDKs", size: "Full" }) %>
       </li>
-      <li>
-        <%- partial("component/link", { url: "/guide/release_notes.html", label: "Release Notes", size: "Full" }) %>
+      <li class="opensource-only">
+        <%- partial("component/link", { url: "https://github.com/heartexlabs/label-studio/releases", label: "Release Notes", size: "Full" }) %>
       </li>
       <li>
         <%- partial("component/link", { url: "/guide/get_started.html#Terminology", label: "Glossary", size: "Full" }) %>
@@ -340,7 +340,7 @@ meta_description: Get started with Label Studio by creating projects to label an
             <li class="opensource-only">
               <%- partial("component/link", { url: "/api", label: "API and SDKs", size: "Full" }) %>
             </li>
-            <li>
+            <li class="enterprise-only">
               <%- partial("component/link", { url: "/guide/release_notes.html", label: "Release Notes", size: "Full" }) %>
             </li>
             <li>
