--- a/docs/themes/v2/layout/home.ejs
+++ b/docs/themes/v2/layout/home.ejs
@@ -67,12 +67,12 @@ meta_description: Get started with Label Studio by creating projects to label an
 </div>
 <div class="opensource-only">
   <div class="columns">
-    <div class="card-light">
+    <div class="card card-light">
       <!-- All the Open Source cards are listed here -->
     <%- partial("component/heading", {text: "Getting Started", tag: "h2", customClass: "card-title" }) %>
     <%- partial("component/link", { url: "/guide/install.html", label: "Learn how to install", customClass: "card-cta" }) %>
     </div>
-    <div class="card-light">
+    <div class="card card-light">
     <%- partial("component/heading", {text: "Labeling Templates", tag: "h2", customClass: "card-title" }) %>
     <%- partial("component/link", { url: "/templates", label: "Explore Templates", customClass: "card-cta" }) %>
     </div>
@@ -195,12 +195,12 @@ meta_description: Get started with Label Studio by creating projects to label an
 
 <div class="enterprise-only">
   <div class="columns">
-    <div class="card-light">
+    <div class="card card-light">
         <!-- All the Enterprise cards are listed here -->
       <%- partial("component/heading", {text: "Getting Started", tag: "h2", customClass: "card-title" }) %>
       <%- partial("component/link", { url: "/guide/install.html", label: "Learn how to install", customClass: "card-cta" }) %>
       </div>
-      <div class="card-light">
+      <div class="card card-light">
       <%- partial("component/heading", {text: "Labeling Templates", tag: "h2", customClass: "card-title" }) %>
       <%- partial("component/link", { url: "/templates", label: "Explore Templates", customClass: "card-cta" }) %>
     </div>
@@ -335,10 +335,10 @@ meta_description: Get started with Label Studio by creating projects to label an
           <%- partial("component/heading", {text: "Reference", tag: "h2", size: "XSmall", customClass: "card-title"}) %>
           <ul class="card-links-list">
             <li class="enterprise-only">
-              <%- partial("component/link", { url: "/app.heartex.com/docs/api", label: "API and SDKs", size: "Full" }) %>
+              <%- partial("component/link", { url: "https://app.heartex.com/docs/api", label: "API and SDKs", size: "Full" }) %>
             </li>
             <li class="opensource-only">
-              <%- partial("component/link", { url: "/api", label: "API and SDKs", size: "Full" }) %>
+              <%- partial("component/link", { url:  "https://labelstud.io/api", label: "API and SDKs", size: "Full" }) %>
             </li>
             <li class="enterprise-only">
               <%- partial("component/link", { url: "/guide/release_notes.html", label: "Release Notes", size: "Full" }) %>
