Flex hack to constraint preview height

--- a/label_studio/frontend/src/pages/CreateProject/Config/Config.styl
+++ b/label_studio/frontend/src/pages/CreateProject/Config/Config.styl
@@ -391,6 +391,7 @@ styled_scroll()
     height: 100%
   &-ui
     flex 1
+    min-height 0
   &-error
     color: #771b04
     border: 1px solid #e68a6e
