--- a/label_studio/users/templates/users/user_account.html
+++ b/label_studio/users/templates/users/user_account.html
@@ -111,7 +111,8 @@
              href="https://docs.heartex.com/guide/api.html"
              {% else %}
              href="https://labelstud.io/guide/api.html"
-             {% endif %} target="_blank">Documentation</a>
+             {% endif %} target="_blank">Documentation
+          </a>
         </p>
       </div>
     </form>
