--- a/docs/themes/v2/layout/home.ejs
+++ b/docs/themes/v2/layout/home.ejs
@@ -185,7 +185,7 @@ meta_description: Get started with Label Studio by creating projects to label an
     <%- partial("component/heading", {text: "Reference", tag: "h2", size: "XSmall", customClass: "card-title"}) %>
     <ul class="card-links-list">
       <li class="enterprise-only">
-        <%- partial("component/link", { url: "/app.heartex.com/docs/api", label: "API and SDKs", size: "Full" }) %>
+        <%- partial("component/link", { url: "https://app.heartex.com/docs/api", label: "API and SDKs", size: "Full" }) %>
       </li>
       <li class="opensource-only">
         <%- partial("component/link", { url: "/api", label: "API and SDKs", size: "Full" }) %>
@@ -321,7 +321,7 @@ meta_description: Get started with Label Studio by creating projects to label an
     <div class="card">
           <%- partial("component/heading", {text: "Install", tag: "h2", size: "XSmall", customClass: "card-title"}) %>
           <ul class="card-links-list">
-            <li>
+            <li class="opensource-only">
               <%- partial("component/link", { url: "/guide/install.html", label: "Install and Upgrade", size: "Full" }) %>
             </li>
             <li class="enterprise-only">
