Exclude with selectors instead

--- a/docs/themes/v2/layout/home.ejs
+++ b/docs/themes/v2/layout/home.ejs
@@ -1,7 +1,7 @@
 ---
 meta_description: Get started with Label Studio by creating projects to label and annotate data for machine learning and data science models.
 ---
-
+<div class="home-page-index">
 <div class="home-page-title-grid">
   <div>
     <%- partial("component/heading", {text: "Label Studio Docs", size: "XLarge", tag: "h1", customClass: "home-page-title"}) %>
@@ -348,5 +348,6 @@ meta_description: Get started with Label Studio by creating projects to label an
           </ul>
     </div>
   </div>
+</div>
 </div>
       
