Fix broken links and remove site specific content on EJS files too

--- a/docs/themes/v2/layout/home.ejs
+++ b/docs/themes/v2/layout/home.ejs
@@ -78,7 +78,7 @@ meta_description: Get started with Label Studio by creating projects to label an
     <div class="card card-light">
       <!-- All the Open Source cards are listed here -->
     <%- partial("component/heading", {text: "Getting Started", tag: "h2", customClass: "card-title" }) %>
-    <%- partial("component/link", { url: "/guide/install.html", label: "Learn how to install", customClass: "card-cta" }) %>
+    <%- partial("component/link", { url: "https://labelstud.io/guide/install.html", label: "Learn how to install", customClass: "card-cta" }) %>
     </div>
     <div class="card card-light">
     <%- partial("component/heading", {text: "Labeling Templates", tag: "h2", customClass: "card-title" }) %>
