Ability to hide the sidebar

--- a/docs/themes/v2/layout/layout.ejs
+++ b/docs/themes/v2/layout/layout.ejs
@@ -111,7 +111,7 @@
   <%- partial("partials/header") %>
 
   <main class="<%- 'page-type-' + page.type %>">
-    <% if(page.type !== "playground" && page.type !== "blog") { %>
+    <% if(page.type !== "playground" && page.type !== "blog" && page.hide_sidebar !== true) { %>
       <aside class="page-sidebar">
         <%- partial("partials/toc", { type: page.type, tier: tier }) %>
       </aside>
