--- a/docs/themes/v2/source/css/styles.css
+++ b/docs/themes/v2/source/css/styles.css
@@ -38,6 +38,9 @@ html {
 
   color: var(--color-gray-900);
   font-family: var(--font-family-secondary);
+}
+
+html.js-enhanced {
   scroll-behavior: smooth;
 }
 
@@ -845,6 +848,15 @@ main {
   display: flex;
 }
 
+.notion-grid {
+  max-width: 97ch;
+  margin: 0 auto;
+}
+
+.notion-grid .content-markdown {
+  max-width: 100%;
+}
+
 .make-intense-zoom {
   cursor: url("/images/plus_cursor.png") 25 25, auto;
 }
@@ -863,6 +875,18 @@ main {
   margin-top: 0;
 }
 
+.notion-toc {
+  background-color: var(--color-gray-10);
+  padding: 2em;
+  margin-top: 2em;
+  font-size: 1.25em;
+}
+
+.notion-toc h3 {
+  color: var(--color-gray-600);
+  margin-top: 0;
+}
+
 .toc-list {
   list-style: none;
   margin: 0;
@@ -870,7 +894,8 @@ main {
   font-weight: 500;
 }
 
-.toc-list a {
+.toc .toc-list a,
+.notion-toc .toc-list a {
   color: var(--color-gray-900);
   text-decoration: none;
   font-size: 0.875rem;
@@ -880,8 +905,13 @@ main {
   color: var(--color-main-accent);
 }
 
-.toc-list li + li {
+.toc-list > li + li {
   margin-top: 1em;
+}
+
+.notion-toc .toc-list-child {
+  list-style: none;
+  padding-left: 1em;
 }
 
 @media (max-width: 1150px) {
