--- a/label_studio/users/templates/users/user_signup.html
+++ b/label_studio/users/templates/users/user_signup.html
@@ -37,7 +37,7 @@
                type="checkbox" style="width: auto" checked="true"
                onchange="document.getElementById('allow_newsletters').value=document.getElementById('allow_newsletters_visual').checked">
         Get the latest news from Heidi
-        <img src="{{ settings.HOSTNAME }}{% static 'images/heidi.png' %}" alt="Heidi"
+        <img src="{{ settings.NETLOC }}{% static 'images/heidi.png' %}" alt="Heidi"
              width="25" style="display: inline; margin: 0; position: relative; top: 5px; left: 0px">
 
       </label>
