--- a/label_studio/templates/403.html
+++ b/label_studio/templates/403.html
@@ -3,21 +3,21 @@
 
 {% block head %}
   <title>403 | Label Studio</title>
-  <link rel="stylesheet" href="{{ settings.HOSTNAME }}{% static 'css/error.css' %}"/>
+  <link rel="stylesheet" href="{{ settings.NETLOC }}{% static 'css/error.css' %}"/>
 {% endblock %}
 
 
 {% block content %}
 <div class="ls-global-error">
   <h1>Server error</h1>
-  <img class="ls-global-error__heidi" src="{{ settings.HOSTNAME }}{% static 'images/opossum_broken.svg' %}" height="111" alt="Heidi's down" />
+  <img class="ls-global-error__heidi" src="{{ settings.NETLOC }}{% static 'images/opossum_broken.svg' %}" height="111" alt="Heidi's down" />
   <h2>403 Forbidden</h2>
   {% autoescape off %}
   <div class="ls-global-error__details">{{ exception }}</div>
   {% endautoescape %}
   <p class="ls-global-error__actions">
     <a class="ls-global-error__slack button" target="_blank" href="https://slack.labelstudio.heartex.com/?source=product-403-error">
-      <img src="{{ settings.HOSTNAME }}{% static 'images/slack.png' %}" width="16" />
+      <img src="{{ settings.NETLOC }}{% static 'images/slack.png' %}" width="16" />
       Ask on Slack
     </a>
     <button onClick="history.back()">Go Back</button>
