--- a/label_studio/templates/drf-yasg/redoc.html
+++ b/label_studio/templates/drf-yasg/redoc.html
@@ -33,7 +33,7 @@
 
 {% block favicon %}
 {# -- Maybe replace the favicon -- #}
-<link rel="icon" type="image/png" href="{{ settings.HOSTNAME }}{% static 'drf-yasg/redoc/redoc-logo.png' %}"/>
+<link rel="icon" type="image/png" href="{{ settings.NETLOC }}{% static 'drf-yasg/redoc/redoc-logo.png' %}"/>
 {% endblock %}
 
 
